--- a/slide2.html
+++ b/slide2.html
@@ -15,7 +15,6 @@
         <div class="row">
 
             <div class="col-md-4 second_slide-content">
-
                 <h2 class="second_slide-title">
                     Sports development platform for kids
                 </h2>
@@ -26,7 +25,10 @@
                 </p>
 
                 <button class="button--primary second_slide-button" title="TRY 30 DAYS FREE">TRY 30 DAYS FREE</button>
+            </div>
 
+            <div class="col-md-3 second_slide-phone">
+                <img src="src/image/slide2_se.png" alt="phone" />
             </div>
 
             <div class="col-md-3">
