Gray section created

--- a/slide2.html
+++ b/slide2.html
@@ -11,7 +11,7 @@
 
 <!--SECOND SLIDE-->
 <div class="item">
-    <div class="container">
+    <div class="container second_slide-left">
         <div class="row">
 
             <div class="col-md-4 second_slide-content">
@@ -28,15 +28,19 @@
             </div>
 
             <div class="col-md-3 second_slide-phone">
-                <img src="src/image/slide2_se.png" alt="phone" />
-            </div>
-
-            <div class="col-md-3">
-
+            <img src="src/image/slide2_se.png" alt="phone" />
             </div>
 
         </div>
+
     </div>
+
+    <div class="grey_block">
+        <div class="container">
+            <a href="#">Visit product page to learn more →</a>
+        </div>
+    </div>
+
 </div>
 
 
