Right side created

--- a/slide2.html
+++ b/slide2.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--SECOND SLIDE-->
-<div class="item">
+<div class="item second_slide">
     <div class="container second_slide-left">
         <div class="row">
 
@@ -31,6 +31,10 @@
             <img src="src/image/slide2_se.png" alt="phone" />
             </div>
 
+            <div class="col-md-5 second_slide-right">
+                <img src="src/image/slide2_pad.png" />
+            </div>
+
         </div>
 
     </div>
@@ -40,6 +44,14 @@
             <a href="#">Visit product page to learn more →</a>
         </div>
     </div>
+
+    <!--<div class="container-fluid second_slide-right">-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-5 col-md-offset-7">-->
+                <!--<img src="src/image/slide2_pad.png" />-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 </div>
 
