--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!--<div class="row">-->
         <div>
             <!-- Карусель -->
-            <div id="myCarousel" class="carousel slide" data-interval="8000" data-ride="carousel">
+            <div id="myCarous" class="carousel slide" data-interval="8000" data-ride="carousel">
                 <!-- Индикаторы для карусели -->
                 <!--<ol class="carousel-indicators">-->
                 <!--&lt;!&ndash; Перейти к 0 слайду карусели с помощью соответствующего индекса data-slide-to="0" &ndash;&gt;-->
@@ -253,7 +253,7 @@
         <!--<div class="row">-->
         <div>
             <!-- Карусель -->
-            <div id="myCarousel" class="carousel slide" data-interval="8000" data-ride="carousel">
+            <div id="carousel-sportsmens" class="carousel slide" data-interval="8000" data-ride="carousel">
                 <!-- Индикаторы для карусели -->
                 <!--<ol class="carousel-indicators">-->
                 <!--&lt;!&ndash; Перейти к 0 слайду карусели с помощью соответствующего индекса data-slide-to="0" &ndash;&gt;-->
@@ -390,16 +390,18 @@
                                             <!--<div class="row">-->
                                             <div class="spotsmens_info">
                                                 <div class="spotsmens_photo">
-                                                    <img class="photo_size" src="src/image/michaela.jpg" alt="reily"/>
+                                                    <img class="photo_size" src="src/image/mel.jpg" alt="reily"/>
                                                 </div>
                                                 <div class="sportsmens_bio">
                                                     <div class="sportsmens_title">
-                                                        <h6 class="fontbold">Michaela Breeze</h6>
-                                                        <h6>Double Commonwealth Games Champion</h6>
+                                                        <h6 class="fontbold">Mel Clarke</h6>
+                                                        <h6>Double Para-Olympian medallist</h6>
                                                     </div>
-                                                    <div class="sportsmens_biography">Having won medals in weightlifting from a very young age
-                                                        Michaela went on to become Double Commonwealth Games Champion and was awarded the MBE in the
-                                                        2011 Honours list.
+                                                    <div class="sportsmens_biography">She has also won Gold and Silver
+                                                        medals at the World Championships.  Due to an arthritic condition
+                                                        Mel has had to use a wheelchair since the age of 11 and lost sight
+                                                        in her aiming eye and had to remodel her approach physically and
+                                                        mentally… Read more
                                                     </div>
 
 
@@ -417,16 +419,16 @@
                                             <!--<div class="row">-->
                                             <div class="spotsmens_info">
                                                 <div class="spotsmens_photo">
-                                                    <img class="photo_size" src="src/image/leon.jpg" alt="reily"/>
+                                                    <img class="photo_size" src="src/image/toby.jpg" alt="reily"/>
                                                 </div>
                                                 <div class="sportsmens_bio">
                                                     <div class="sportsmens_title">
-                                                        <h6 class="fontbold">Leon Taylor</h6>
-                                                        <h6>Triple Olympic diver and Silver medallist
-                                                            from the 2004 Athens Games</h6>
+                                                        <h6 class="fontbold">Toby Garbett</h6>
+                                                        <h6>Double Olympic and Double World</h6>
                                                     </div>
-                                                    <div class="sportsmens_biography">Leon has transitioned into commentary with the BBC and
-                                                        successful author specialising in mentoring.
+                                                    <div class="sportsmens_biography">Upon retirement from rowing Toby
+                                                        refocused his goals and gained GB Vests in Triathlon going on to
+                                                        become the National AG Champion.
                                                     </div>
 
 
@@ -447,7 +449,7 @@
                     <div class="slide-button">
                         <div class="container slide-button-container">
                             <div class="slide-control-height">
-                                <a class="carousel-control slide-control" href="#myCarousel" data-slide="next">
+                                <a class="carousel-control slide-control" href="#carousel-sportsmens" data-slide="next">
                                     <span class="glyphicon slide-content"></span>
                                 </a>
                             </div>
