--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <body>
 
 <header class="class-header">
-    <section class="nav_section">
+
     <div class="header-nav-fixed">
-        <div class="container navbar-fixed-top header-nav-fixed">
+        <div class="container">
             <div class="row">
 
                 <div class="col-md-4">
-                    <!--logo-->
                     <div class="margin-head">
                         <img class="logo cus-line" src="src/image/logo.svg">
-                        <!--<ul class="dropdown">-->
                         <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
                                 class="caret custom-b"></b>Sports Stars Inspiration Day</a>
                         <ul class="dropdown-menu dropmenu-custom">
@@ -30,68 +28,49 @@
                     </div>
                 </div>
                 <div class="col-md-7 col-md-offset-1">
-                    <!--monu-->
-                    <div class="margin-head">
-                        <nav class="navbar navbar-default navbar-custom">
-                            <!-- Контейнер (определяет ширину Navbar) -->
-                            <div class="container">
-                                <!-- Заголовок -->
-                                <div class="navbar-header">
-                                    <!-- Кнопка «Гамбургер» отображается только в мобильном виде (предназначена для открытия основного содержимого Navbar) -->
-                                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                                            data-target="#navbar-main">
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                    </button>
-                                </div>
-                                <!-- Основная часть меню (может содержать ссылки, формы и другие элементы) -->
-                                <div class="collapse navbar-collapse" id="navbar-main">
-                                    <!-- Содержимое основной части -->
-                                    <ul class="nav navbar-nav">
-                                        <li><a href="#">How it works</a></li>
-                                        <li><a href="#">Speakers</a></li>
-                                        <li><a href="#testionials">Testimonials</a></li>
-                                        <li><a href="#software">Software</a></li>
-                                        <li><a href="#">Contact</a></li>
-                                        <li><a href="#myModal" class="btn btn-primary navbar-custom collapse"
-                                               data-toggle="modal">Host event</a>
-                                            <!-- HTML-код модального окна -->
 
-                                        </li>
-                                        <!--</li>-->
-                                    </ul>
-                                </div>
+                    <nav class="navbar navbar-default navbar-custom">
+                        <div class="container">
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                        data-target="#navbar-main">
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
                             </div>
-                        </nav>
+                            <div class="collapse navbar-collapse" id="navbar-main">
+                                <ul class="nav navbar-nav">
+                                    <li><a href="#">How it works</a></li>
+                                    <li><a href="#">Speakers</a></li>
+                                    <li><a href="#testionials">Testimonials</a></li>
+                                    <li><a href="#software">Software</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#myModal" class="btn btn-primary navbar-custom collapse"
+                                           data-toggle="modal">Host event</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
 
-                    </div>
+
                 </div>
             </div>
         </div>
     </div>
-    </section>
+
     <div class="mar-slide">
         <!--<div class="row">-->
         <div>
             <!-- Карусель -->
-            <div id="myCarous" class="carousel slide" data-interval="8000" data-ride="carousel">
-                <!-- Индикаторы для карусели -->
-                <!--<ol class="carousel-indicators">-->
-                <!--&lt;!&ndash; Перейти к 0 слайду карусели с помощью соответствующего индекса data-slide-to="0" &ndash;&gt;-->
-                <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
-                <!--&lt;!&ndash; Перейти к 1 слайду карусели с помощью соответствующего индекса data-slide-to="1" &ndash;&gt;-->
-                <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
-                <!--&lt;!&ndash;&lt;!&ndash; Перейти к 2 слайду карусели с помощью соответствующего индекса data-slide-to="2" &ndash;&gt;&ndash;&gt;-->
-                <!--&lt;!&ndash;&lt;!&ndash;<li data-target="#myCarousel" data-slide-to="2"></li>&ndash;&gt;&ndash;&gt;-->
-                <!--</ol>-->
-                <!-- Слайды карусели -->
+            <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
                 <div class="carousel-inner">
-                    <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
+
+                    <!--FIRST SLIDE-->
                     <div class="active item slide_background">
                         <div class="container">
                             <div class="row">
-
 
                                 <div class="col-md-6 col-md-offset-6 oid">
                                     <div class="oidcen">
@@ -108,7 +87,8 @@
                                             story of his journey to success via different“ obstacles including injury.
                                             We would love to have him back!”
                                         </div>
-                                        <div>
+
+                                        <div class="bold_text">
                                             Jacqui Ferris
                                         </div>
                                         <div>
@@ -137,19 +117,23 @@
                                     </h2>
 
                                     <p class="second_slide-text">
-                                        For many of us, our very first experience of learning about the celestial bodies begins when we saw
-                                        our first full moon in the sky. It is truly a magnificent view even to the naked eye.
+                                        For many of us, our very first experience of learning about the celestial bodies
+                                        begins when we saw
+                                        our first full moon in the sky. It is truly a magnificent view even to the naked
+                                        eye.
                                     </p>
 
-                                    <button class="button--primary second_slide-button" title="TRY 30 DAYS FREE">TRY 30 DAYS FREE</button>
+                                    <button class="button--primary second_slide-button" title="TRY 30 DAYS FREE">TRY 30
+                                        DAYS FREE
+                                    </button>
                                 </div>
 
                                 <div class="col-md-3 second_slide-phone">
-                                    <img src="src/image/slide2_se.png" alt="phone" />
+                                    <img src="src/image/slide2_se.png" alt="phone"/>
                                 </div>
 
                                 <div class="col-md-5 second_slide-right">
-                                    <img src="src/image/slide2_pad.png" />
+                                    <img src="src/image/slide2_pad.png"/>
                                 </div>
 
                             </div>
@@ -163,6 +147,7 @@
                         </div>
 
                     </div>
+
                     <div class="slide-button">
                         <div class="container slide-button-container">
                             <div class="slide-control-height">
@@ -223,7 +208,7 @@
                     </div>
                     <div class="sportsmens_bio">
                         <div class="star_title">
-                            <h6 class="fontbold" >Brendan Reilly</h6>
+                            <h6 class="fontbold">Brendan Reilly</h6>
                             <h6>Double Olympian, qualified PE teacher
                                 and Dad of 3 sports mad kids</h6>
                         </div>
@@ -271,7 +256,7 @@
                             <div class="row">
 
 
-                            <div class="container mar padto">
+                                <div class="container mar padto">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <!--<div class="container">-->
@@ -285,8 +270,10 @@
                                                         <h6 class="fontbold">Michaela Breeze</h6>
                                                         <h6>Double Commonwealth Games Champion</h6>
                                                     </div>
-                                                    <div class="sportsmens_biography">Having won medals in weightlifting from a very young age
-                                                        Michaela went on to become Double Commonwealth Games Champion and was awarded the MBE in the
+                                                    <div class="sportsmens_biography">Having won medals in weightlifting
+                                                        from a very young age
+                                                        Michaela went on to become Double Commonwealth Games Champion
+                                                        and was awarded the MBE in the
                                                         2011 Honours list.
                                                     </div>
 
@@ -308,8 +295,10 @@
                                                         <h6 class="fontbold">Jo Mersh</h6>
                                                         <h6>Olympian and World Indoor Medalist</h6>
                                                     </div>
-                                                    <div class="sportsmens_biography">Jo excelled on the track whilst developing her career as a
-                                                        singer songwriter. Jo is engaging, charismatic and sure to inspire any audience she presents
+                                                    <div class="sportsmens_biography">Jo excelled on the track whilst
+                                                        developing her career as a
+                                                        singer songwriter. Jo is engaging, charismatic and sure to
+                                                        inspire any audience she presents
                                                         to.
                                                     </div>
 
@@ -336,7 +325,8 @@
                                                         <h6>Triple Olympic diver and Silver medallist
                                                             from the 2004 Athens Games</h6>
                                                     </div>
-                                                    <div class="sportsmens_biography">Leon has transitioned into commentary with the BBC and
+                                                    <div class="sportsmens_biography">Leon has transitioned into
+                                                        commentary with the BBC and
                                                         successful author specialising in mentoring.
                                                     </div>
 
@@ -359,8 +349,10 @@
                                                         <h6>One of the most successful British
                                                             High Jumper ever</h6>
                                                     </div>
-                                                    <div class="sportsmens_biography">An Olympic Finalist, European and Commonwealth Games Medallist
-                                                        with a best of 2m30cm. Martyn is a fine example of having a plan B away from the athletics
+                                                    <div class="sportsmens_biography">An Olympic Finalist, European and
+                                                        Commonwealth Games Medallist
+                                                        with a best of 2m30cm. Martyn is a fine example of having a plan
+                                                        B away from the athletics
                                                         track. He graduated from psychology… Read more
                                                     </div>
 
@@ -398,8 +390,9 @@
                                                         <h6>Double Para-Olympian medallist</h6>
                                                     </div>
                                                     <div class="sportsmens_biography">She has also won Gold and Silver
-                                                        medals at the World Championships.  Due to an arthritic condition
-                                                        Mel has had to use a wheelchair since the age of 11 and lost sight
+                                                        medals at the World Championships. Due to an arthritic condition
+                                                        Mel has had to use a wheelchair since the age of 11 and lost
+                                                        sight
                                                         in her aiming eye and had to remodel her approach physically and
                                                         mentally… Read more
                                                     </div>
@@ -540,7 +533,8 @@
                 <div class="software-margin">The Olympian Inspiration Days would not be possible without the support
                     of Squad in Touch software.
                 </div>
-                <div class="software-margin">The software can help further engage, inspire and develop your pupils, staffs and parents interest
+                <div class="software-margin">The software can help further engage, inspire and develop your pupils,
+                    staffs and parents interest
                     and knowledge of PE and Sport. Not only a management and organisational tool but an ability to
                     provide sustainable services to benefit future pupils and staff in their sports development.
                 </div>
@@ -566,19 +560,37 @@
 <section class="ask_questions">
     <div class="container">
         <div class="row">
+
             <div class="col-md-6">
-                <h3>Feel free to ask questions via email,
-                    or call us <span class="ask-phone">01293 734004</span></h3>
+                <h3>
+                    Feel free to ask questions via email, <br/>
+                    or call us
+                    <span class="ask-phone">01293 734004</span>
+                </h3>
             </div>
+
             <div class="col-md-6 ask-form">
-                <div for="email">Email</div>
-                <input type="email" class="form-control email-height ask-form-background" id="email"
-                       placeholder="Enter email" required>
-                <div class="message-margin" for="message">Your message</div>
-                <textarea id="message" class="form-control message-height ask-form-background" rows="5"
-                          placeholder="Enter your message"
-                          required></textarea>
+
+                <div class="contact_form">
+
+                    <label for="email">Email</label>
+                    <div class="email_container">
+                        <input type="email" class="email-height ask-form-background contact_form-email" id="email">
+
+                        <button class="send_button">
+                            Send
+                        </button>
+
+                    </div>
+
+
+                    <label class="message-margin" for="message">Your message</label>
+                    <textarea id="message" class="message-height ask-form-background contact_form-message"
+                              rows="5"></textarea>
+
+                </div>
             </div>
+
         </div>
     </div>
 
@@ -593,15 +605,17 @@
         <div class="row">
             <div class="col-md-2 contacts-margin">
                 <div class="fontbold">Squad in Touch Ltd</div>
-                    <div>Pacific House, 382
+                <div>Pacific House, 382
                     Kenton Road Harrow
-                    Middlesex, HA3 8DP</div>
+                    Middlesex, HA3 8DP
+                </div>
             </div>
             <div class="col-md-2 contacts-margin">
                 <div class="fontbold">Contact information</div>
                 <div>info@squadintouch.co.uk
-                    01293 734004</div>
-                    <div>Facbook   |   Twitter</div>
+                    01293 734004
+                </div>
+                <div>Facbook | Twitter</div>
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <img src="src/image/logoccss.svg" alt="reily"/>
