--- a/index.html
+++ b/index.html
@@ -170,11 +170,12 @@
 
 <!--what is olympians day-->
 <section class="event_section">
-    <div class="container mar">
+
+    <div class="container">
         <div class="row">
             <div class="col-md-5">
                 <h3> What is Sports Stars Inspiration Day</h3>
-                <div>The Olympic Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
+                <div class="event_section-text">The Olympic Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
                     It is a time for pupils eyes to be opened to new goals and experience new challenges led by our team
                     of Olympians.
                 </div>
