--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="container second_slide-left">
                             <div class="row">
 
-                                <div class="col-md-4 second_slide-content">
+                                <div class="col-sm-5 col-md-4 second_slide-content">
                                     <h2 class="second_slide-title">
                                         Sports development platform for kids
                                     </h2>
@@ -123,17 +123,13 @@
                                         eye.
                                     </p>
 
-                                    <button class="button--primary second_slide-button" title="TRY 30 DAYS FREE">TRY 30
-                                        DAYS FREE
+                                    <button class="button--primary second_slide-button" title="TRY 30 DAYS FREE">
+                                        TRY 30 DAYS FREE
                                     </button>
                                 </div>
 
-                                <div class="col-md-3 second_slide-phone">
-                                    <img src="src/image/slide2_se.png" alt="phone"/>
-                                </div>
-
-                                <div class="col-md-5 second_slide-right">
-                                    <img src="src/image/slide2_pad.png"/>
+                                <div class="col-sm-7 col-md-8 hidden-xs second_slide-right">
+                                    <img src="src/image/slide2_devices.png"/>
                                 </div>
 
                             </div>
@@ -147,6 +143,7 @@
                         </div>
 
                     </div>
+
 
                     <div class="slide-button">
                         <div class="container slide-button-container">
@@ -169,22 +166,22 @@
 
 
 <!--what is olympians day-->
-<section id="howitworks" class="event_section">
+<section class="event_section">
 
-    <div class="container">
+    <div class="container ">
         <div class="row">
-            <div class="col-md-5">
+            <div class="event_section-image visible-xs"> </div>
+            <div class="col-md-5 event_section-left">
                 <h3> What is Sports Stars Inspiration Day</h3>
-                <div class="event_section-text">The Olympic Inspiration day is a time for pupils to raise their bar of
-                    aspiration and ambition.
-                    It is a time for pupils eyes to be opened to new goals and experience new challenges led by our team
-                    of Olympians.
+                <div class="event_section-text">
+                    The Olympic Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
+                    It is a time for pupils eyes to be opened to new goals and experience new challenges led
+                    by our team of Olympians.
                 </div>
                 <button class="button--primary event-button" href="#myModal" data-toggle="modal">Host event</button>
             </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-6 wodback">
-
+            <div class="col-md-6 col-md-offset-1 event_section-right hidden-xs">
+                <div class="event_section-image"> </div>
             </div>
         </div>
     </div>
