--- a/contact.html
+++ b/contact.html
@@ -8,38 +8,42 @@
 </head>
 <body>
 
-<!--Ask questions-->
-<section class="ask_questions">
+<!--CONTACT SECTION-->
+<section class="ask_questions contact_section">
     <div class="container">
         <div class="row">
 
             <div class="col-md-6">
-                <h3>
-                    Feel free to ask questions via email, <br/>
-                    or call us
-                    <span class="ask-phone">01293 734004</span>
-                </h3>
+                <div class="contact_section-left">
+                    <h3>
+                        Feel free to ask questions via email, <br/>
+                        or call us
+                        <span class="ask-phone">01293 734004</span>
+                    </h3>
+                </div>
             </div>
 
-            <div class="col-md-6 ask-form">
+            <div class="col-md-6">
 
-                <div class="contact_form">
-                    <!--EMAIL-->
-                    <label for="email">Email</label>
-                    <div class="email_container">
-                        <input type="email" class="email-height ask-form-background contact_form-email" id="email">
+                <div class="contact_section-right">
 
-                        <button class="send_button">
-                            Send
-                        </button>
+                    <div class="contact_form">
+                        <!--EMAIL-->
+                        <label for="email">Email</label>
+                        <div class="email_container">
+                            <input type="email" class="email-height ask-form-background contact_form-email" id="email" />
+                            <button class="send_button">
+                                Send
+                            </button>
+                        </div>
+                        <!--./EMAIL-->
+
+
+                        <label class="message-margin" for="message">Your message</label>
+                        <textarea id="message" class="message-height ask-form-background contact_form-message"
+                                  rows="5"></textarea>
 
                     </div>
-                    <!--./EMAIL-->
-
-
-                    <label class="message-margin" for="message">Your message</label>
-                    <textarea id="message" class="message-height ask-form-background contact_form-message" rows="5"></textarea>
-
                 </div>
             </div>
 
@@ -48,6 +52,7 @@
 
 
 </section>
+<!--./CONTACT SECTION-->
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
