--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     <li><a href="#testimonials">Testimonials</a></li>
                                     <li><a href="#software">Software</a></li>
                                     <li><a href="#contact">Contact</a></li>
-                                    <li><a href="#myModal" class="btn btn-primary navbar-custom collapse"
+                                    <li><a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
                                            data-toggle="modal">Host event</a>
                                     </li>
                                 </ul>
@@ -170,7 +170,7 @@
 
     <div class="container ">
         <div class="row">
-            <div class="event_section-image visible-xs"> </div>
+            <div class="event_section-image visible-xs"></div>
             <div class="col-md-5 event_section-left">
                 <h3> What is Sports Stars Inspiration Day</h3>
                 <div class="event_section-text">
@@ -181,7 +181,7 @@
                 <button class="button--primary event-button" href="#myModal" data-toggle="modal">Host event</button>
             </div>
             <div class="col-md-6 col-md-offset-1 event_section-right hidden-xs">
-                <div class="event_section-image"> </div>
+                <div class="event_section-image"></div>
             </div>
         </div>
     </div>
@@ -461,7 +461,7 @@
             <div class="col-md-12 testimonial-bottom">
                 <h3>Testimonials</h3>
             </div>
-            <div class="slide-button-sportsmens">
+            <div class="slide-button-testimonials">
                 <div class="container slide-button-container">
                     <div class="slide-control-height">
                         <a class="carousel-control slide-control" href="#carousel-testimonials" data-slide="next">
@@ -478,79 +478,81 @@
                     <div class="active item">
                         <div class="container">
                             <div class="row">
-                        <div class="col-md-2">
-                            <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="testimonials-title">
-                                <h4>Sir John Barrow Primary School</h4></div>
-                            <div>He was very flexible with how we could make it more challenging for KS2 and his
-                                sessions linked
-                                perfectly to the PE curriculum and Multi-Skills.
-                            </div>
-                            <div>— James Maher, Teacher</div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="testimonial1-background"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="testimonial2-background"></div>
-                        </div>
+                                <div class="col-md-2">
+                                    <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="testimonials-title">
+                                        <h4>Sir John Barrow Primary School</h4></div>
+                                    <div>He was very flexible with how we could make it more challenging for KS2 and his
+                                        sessions linked
+                                        perfectly to the PE curriculum and Multi-Skills.
+                                        <br/>
+                                        <br>— James Maher, Teacher
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="testimonial1-background"></div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="testimonial2-background"></div>
+                                </div>
                             </div>
                         </div>
 
                     </div>
                     <div class="container">
-                    <div class="row school2-margin">
-                        <div class="col-md-2">
-                            <img class="testimonial-school" src="src/image/school2.jpg" alt="reily"/>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="testimonials-title">
-                                <h4>Alton Placholder School</h4></div>
-                            <div>"Brendan spoke with enthusiasm and conviction about his own personal journey to being
-                                the best he
-                                could be, and both the children and staff were captivated. He kept everyone engaged
-                                through his
-                                honesty, the details in his stories, and his humour… Read more
+                        <div class="row school2-margin">
+                            <div class="col-md-2">
+                                <img class="testimonial-school" src="src/image/school2.jpg" alt="reily"/>
                             </div>
-                            <div>— Robert Knight, School Director</div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="testimonial3-background"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="testimonial4-background"></div>
-                        </div>
+                            <div class="col-md-4">
+                                <div class="testimonials-title">
+                                    <h4>Alton Placholder School</h4></div>
+                                <div>"Brendan spoke with enthusiasm and conviction about his own personal journey to
+                                    being
+                                    the best he
+                                    could be, and both the children and staff were captivated. He kept everyone engaged
+                                    through his
+                                    honesty, the details in his stories, and his humour… Read more
+                                    <br/>
+                                    <br>— Robert Knight, School Director
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="testimonial3-background"></div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="testimonial4-background"></div>
+                            </div>
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
 
 </section>
 <!--./Testimonials-->
 
 <!--Software-->
 <section id="software" class="software_section">
-    <div class="container">
+    <div class="container software_section-height">
         <div class="row">
             <div class="col-md-6">
-                <h2>Squad in touch software</h2>
+                <h3>Squad in touch software</h3>
                 <div class="software-margin">The Olympian Inspiration Days would not be possible without the support
                     of Squad in Touch software.
-                </div>
-                <div class="software-margin">The software can help further engage, inspire and develop your pupils,
+                    <br/>
+                    <br>The software can help further engage, inspire and develop your pupils,
                     staffs and parents interest
                     and knowledge of PE and Sport. Not only a management and organisational tool but an ability to
                     provide sustainable services to benefit future pupils and staff in their sports development.
                 </div>
                 <button class="button--primary software-button" href="#" data-toggle="modal">TRY 30 DAYS FREE</button>
-                <!--<div><a href="">Visit product page to learn more →</a></div>-->
             </div>
 
         </div>
@@ -559,11 +561,9 @@
     <div class="software-macbook">
         <img src="src/image/macbook.png" alt="reily"/>
     </div>
-
-    <!--<div><a href="">Visit product page to learn more →</a></div>-->
-</section>
-<section class="visit-product-page">
-    <div class="container"><a href="">Visit product page to learn more →</a></div>
+    <div class="visit-product-page">
+        <div class="container"><a href="">Visit product page to learn more →</a></div>
+    </div>
 </section>
 <!--./Software-->
 
