--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <div class="slide-button-sportsmens">
         <div class="container slide-button-container">
             <div class="slide-control-height">
-                <a class="carousel-control slide-control" href="#carousel-sportsmens" data-slide="next">
+                <a class="carousel-control slide-control sportsmens-slide" href="#carousel-sportsmens" data-slide="next">
                     <span class="glyphicon slide-content"></span>
                 </a>
             </div>
@@ -478,10 +478,10 @@
                     <div class="active item">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-2">
+                                <div class="col-md-2 testimonial-school-section">
                                     <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 testimonial-info">
                                     <div class="testimonials-title">
                                         <h4>Sir John Barrow Primary School</h4></div>
                                     <div>He was very flexible with how we could make it more challenging for KS2 and his
@@ -503,10 +503,10 @@
                     </div>
                     <div class="container">
                         <div class="row school2-margin">
-                            <div class="col-md-2">
+                            <div class="col-md-2 testimonial-school-section">
                                 <img class="testimonial-school" src="src/image/school2.jpg" alt="reily"/>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 testimonial-info">
                                 <div class="testimonials-title">
                                     <h4>Alton Placholder School</h4></div>
                                 <div>"Brendan spoke with enthusiasm and conviction about his own personal journey to
@@ -629,7 +629,7 @@
                 <div>info@squadintouch.co.uk
                     01293 734004
                 </div>
-                <div>Facbook | Twitter</div>
+                <div>Facebook | Twitter</div>
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <img src="src/image/logoccss.svg" alt="reily"/>
