--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 
 <!--what is olympians day-->
-<section class="event_section">
+<section id="howitworks" class="event_section">
 
     <div class="container ">
         <div class="row">
@@ -342,7 +342,7 @@
                                                         Commonwealth Games Medallist
                                                         with a best of 2m30cm. Martyn is a fine example of having a plan
                                                         B away from the athletics
-                                                        track. He graduated from psychology… Read more
+                                                        track. He graduated from psychology…<span><a href="#martynmodal" data-toggle="modal"> Read more</a></span>
                                                     </div>
 
 
@@ -381,7 +381,7 @@
                                                         Mel has had to use a wheelchair since the age of 11 and lost
                                                         sight
                                                         in her aiming eye and had to remodel her approach physically and
-                                                        mentally… Read more
+                                                        mentally…<span><a href="#melclarkemodal" data-toggle="modal"> Read more</a></span>
                                                     </div>
 
 
@@ -491,8 +491,8 @@
                                         <br>— James Maher, Teacher
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="testimonial1-background"></div>
+                                <div class="col-md-3 testimonial-picture-padding">
+                                    <iframe width="276" height="240" src="https://www.youtube.com/embed/AjAyz7-cSKc" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="testimonial2-background"></div>
@@ -514,12 +514,12 @@
                                     the best he
                                     could be, and both the children and staff were captivated. He kept everyone engaged
                                     through his
-                                    honesty, the details in his stories, and his humour… Read more
+                                    honesty, the details in his stories, and his humour… <span><a href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>
                                     <br/>
                                     <br>— Robert Knight, School Director
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3 testimonial-picture-padding">
                                 <div class="testimonial3-background"></div>
                             </div>
                             <div class="col-md-3">
@@ -535,6 +535,7 @@
         <!--</div>-->
         <!--</div>-->
 
+    </div>
 </section>
 <!--./Testimonials-->
 
@@ -626,7 +627,7 @@
             </div>
             <div class="col-md-2 contacts-margin">
                 <div class="fontbold">Contact information</div>
-                <div>info@squadintouch.co.uk
+                <div><a href="mailto:info@squadintouch.co.uk">info@squadintouch.co.uk</a>
                     01293 734004
                 </div>
                 <div>Facebook | Twitter</div>
@@ -637,7 +638,7 @@
         </div>
     </div>
     <div class="container">
-        <div>Copyright © 2017 Squad In Touch</div>
+        <div class="copyright-margin">Copyright © 2017 Squad In Touch</div>
     </div>
 
 </section>
@@ -697,6 +698,103 @@
                     <!--<div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>.-->
                 </div>
             </form>
+            <!-- Футер модального окна -->
+
+        </div>
+    </div>
+</div>
+
+<!-- HTML-код модального окна -->
+<div id="martynmodal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Заголовок модального окна -->
+            <div class="modal-header sportsmen_modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">×
+                </button>
+                <h4 class="modal-title">Team</h4>
+            </div>
+            <!-- Основное содержимое модального окна -->
+            <div>
+                <div class="sportsmens_title">
+                    <h6 class="sportsmen_subheader"><span class="fontbold">Martyn Bernard</span>
+                        <br>One of the most successful British
+                        High Jumper ever</br></h6>
+                </div>
+                <div class="sportsmens_modal-biography">An Olympic Finalist, European and Commonwealth Games Medallist with a
+                    best of 2m30cm. Martyn is a fine example of having a plan B away from the athletics track.
+                    He graduated from psychology and has recently started a law degree.  He has interests in film and an
+                    honorary director of the Film production Company, "21st Century Filmworks Ltd", A Fucilla Production
+                    Company, and co-producer of the film “Fields of Gold” currently in pre production stage.
+                    <br/>
+                    <br>An inspiration on many levels.
+                </div>
+
+
+            </div>
+            <!-- Футер модального окна -->
+
+        </div>
+    </div>
+</div>
+
+<!-- HTML-код модального окна -->
+<div id="melclarkemodal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Заголовок модального окна -->
+            <div class="modal-header sportsmen_modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">×
+                </button>
+                <h4 class="modal-title">Team</h4>
+            </div>
+            <!-- Основное содержимое модального окна -->
+            <div>
+                <div class="sportsmens_title">
+                    <h6 class="sportsmen_subheader"><span class="fontbold">Mel Clarke</span>
+                        <br>Double Para-Olympian medallist</h6>
+                </div>
+                <div class="sportsmens_modal-biography">She has also won Gold and Silver medals at the World Championships.
+                    Due to an arthritic condition Mel has had to use a wheelchair since the age of 11 and lost sight in
+                    her aiming eye and had to remodel her approach physically and mentally.
+                    <br/>
+                    <br>Mel has an amazing story that pupils can relate to due to the age she was whilst adapting to school,
+                    society and sport. A true hero of resilience and of British Sport.
+                </div>
+
+
+            </div>
+            <!-- Футер модального окна -->
+
+        </div>
+    </div>
+</div>
+
+<!-- HTML-код модального окна -->
+<div id="altonschoolmodal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!-- Заголовок модального окна -->
+            <div class="modal-header sportsmen_modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">×
+                </button>
+                <h4 class="modal-title">Testimonial</h4>
+            </div>
+            <!-- Основное содержимое модального окна -->
+            <div class="testimonials-title sportsmens_title">
+                <h4>Alton Placholder School</h4></div>
+            <div class="sportsmens_modal-biography">"Brendan spoke with enthusiasm and conviction about his own personal journey to
+                being
+                the best he
+                could be, and both the children and staff were captivated. He kept everyone engaged
+                through his
+                honesty, the details in his stories, and his humour… Read more
+                <br/>
+                <br>— Robert Knight, School Director
+            </div>
             <!-- Футер модального окна -->
 
         </div>
