--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                                     <li><a href="#testimonials">Testimonials</a></li>
                                     <li><a href="#software">Software</a></li>
                                     <li><a href="#contact">Contact</a></li>
-                                    <li><a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
+                                    <li><a href="#myModal"
+                                           class="btn btn-primary navbar-custom host-event-color collapse"
                                            data-toggle="modal">Host event</a>
                                     </li>
                                 </ul>
@@ -235,7 +236,8 @@
     <div class="slide-button-sportsmens">
         <div class="container slide-button-container">
             <div class="slide-control-height">
-                <a class="carousel-control slide-control sportsmens-slide" href="#carousel-sportsmens" data-slide="next">
+                <a class="carousel-control slide-control sportsmens-slide" href="#carousel-sportsmens"
+                   data-slide="next">
                     <span class="glyphicon slide-content"></span>
                 </a>
             </div>
@@ -342,7 +344,8 @@
                                                         Commonwealth Games Medallist
                                                         with a best of 2m30cm. Martyn is a fine example of having a plan
                                                         B away from the athletics
-                                                        track. He graduated from psychology…<span><a href="#martynmodal" data-toggle="modal"> Read more</a></span>
+                                                        track. He graduated from psychology…<span><a href="#martynmodal"
+                                                                                                     data-toggle="modal"> Read more</a></span>
                                                     </div>
 
 
@@ -492,7 +495,9 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3 testimonial-picture-padding">
-                                    <iframe width="276" height="240" src="https://www.youtube.com/embed/AjAyz7-cSKc" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                                    <iframe width="276" height="240" src="https://www.youtube.com/embed/AjAyz7-cSKc"
+                                            frameborder="0" gesture="media" allow="encrypted-media"
+                                            allowfullscreen></iframe>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="testimonial2-background"></div>
@@ -514,7 +519,8 @@
                                     the best he
                                     could be, and both the children and staff were captivated. He kept everyone engaged
                                     through his
-                                    honesty, the details in his stories, and his humour… <span><a href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>
+                                    honesty, the details in his stories, and his humour… <span><a
+                                            href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>
                                     <br/>
                                     <br>— Robert Knight, School Director
                                 </div>
@@ -591,7 +597,7 @@
                         <!--EMAIL-->
                         <label for="email">Email</label>
                         <div class="email_container">
-                            <input type="email" class="email-height ask-form-background contact_form-email" id="email" />
+                            <input type="email" class="email-height ask-form-background contact_form-email" id="email"/>
                             <button class="send_button">
                                 Send
                             </button>
@@ -630,7 +636,7 @@
                 <div><a href="mailto:info@squadintouch.co.uk">info@squadintouch.co.uk</a>
                     01293 734004
                 </div>
-                <div>Facebook | Twitter</div>
+                <div>Facebook <span class="contact-divider-color"> | </span>Twitter</div>
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <img src="src/image/logoccss.svg" alt="reily"/>
@@ -646,61 +652,65 @@
 <!--./Contacts-->
 
 <!-- HTML-код модального окна -->
-<div id="myModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <!-- Заголовок модального окна -->
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"
-                        aria-hidden="true">×
-                </button>
-                <h4 class="modal-title">Host Olympian Day</h4>
-            </div>
-            <!-- Основное содержимое модального окна -->
-            <form role="form" id="contactForm">
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="form-group modal-hod">
-                            <label for="email" class="h4">Your email</label>
-                            <input type="email" class="form-control" id="email"
-                                   placeholder="Enter email" required>
-                        </div>
-                        <div class="form-group modal-hod">
-                            <label for="name" class="h4">School name</label>
-                            <input type="text" class="form-control" id="name"
-                                   placeholder="Enter school name" required>
-                        </div>
-                        <div class="form-group modal-hod">
-                            <div class="form-group">
-                                <label for="message" class="h4 ">Additional notes
-                                    (optional)</label>
-                                <textarea id="message" class="form-control" rows="5"
-                                          placeholder="Enter your message"
-                                          required></textarea>
-                            </div>
-                        </div>
-                        <div class="form-group modal-hod">
-                            <button type="submit" id="form-submit"
-                                    class="btn btn-success btn-lg pull-right send-button">
-                                Submit
+<div class="container">
+    <div class="row">
+            <div id="myModal" class="modal fade col-md-8 col-md-offset-2">
+                <div class="modal-dialog modal-width">
+                    <div class="modal-content ">
+                        <!-- Заголовок модального окна -->
+                        <div class="modal-header sportsmen_modal-header">
+                            <button type="button" class="close" data-dismiss="modal"
+                                    aria-hidden="true">×
                             </button>
-                            <div id="msgSubmit" class="h3 text-center hidden">
-                                Message Submitted!
-                            </div>
-                            .
+                            <h4 class="modal-title">Host Olympian Day</h4>
                         </div>
-                    </div>
-                    <!--<div class="form-group">-->
-                    <!--<label for="message" class="h4 ">Additional notes (optional)</label>-->
-                    <!--<textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>-->
-                    <!--</div>-->
-                    <!--<button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>-->
-                    <!--<div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>.-->
-                </div>
-            </form>
-            <!-- Футер модального окна -->
+                        <!-- Основное содержимое модального окна -->
+                        <form role="form" id="contactForm">
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="form-group modal-hod">
+                                        <label for="email" class="h4">Your email</label>
+                                        <input type="email" class="form-control olympian_form-height" id="email"
+                                               placeholder="Enter email" required>
+                                    </div>
+                                    <div class="form-group modal-hod">
+                                        <label for="name" class="h4">School name</label>
+                                        <input type="text" class="form-control olympian_form-height" id="name"
+                                               placeholder="Enter school name" required>
+                                    </div>
+                                    <div class="form-group modal-hod">
+                                        <div class="form-group">
+                                            <label for="message" class="h4 ">Additional notes
+                                                (optional)</label>
+                                            <textarea id="message" class="form-control olympian_form-height" rows="5"
+                                                      placeholder="Enter your message"
+                                                      required></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="form-group modal-hod">
+                                        <button type="submit" id="form-submit"
+                                                class="btn btn-success btn-lg pull-right send-button">
+                                            Submit
+                                        </button>
+                                        <div id="msgSubmit" class="h3 text-center hidden">
+                                            Message Submitted!
+                                        </div>
+                                        .
+                                    </div>
+                                </div>
+                                <!--<div class="form-group">-->
+                                <!--<label for="message" class="h4 ">Additional notes (optional)</label>-->
+                                <!--<textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>-->
+                                <!--</div>-->
+                                <!--<button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>-->
+                                <!--<div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>.-->
+                            </div>
+                        </form>
+                        <!-- Футер модального окна -->
 
-        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 </div>
 
@@ -722,9 +732,10 @@
                         <br>One of the most successful British
                         High Jumper ever</br></h6>
                 </div>
-                <div class="sportsmens_modal-biography">An Olympic Finalist, European and Commonwealth Games Medallist with a
+                <div class="sportsmens_modal-biography">An Olympic Finalist, European and Commonwealth Games Medallist
+                    with a
                     best of 2m30cm. Martyn is a fine example of having a plan B away from the athletics track.
-                    He graduated from psychology and has recently started a law degree.  He has interests in film and an
+                    He graduated from psychology and has recently started a law degree. He has interests in film and an
                     honorary director of the Film production Company, "21st Century Filmworks Ltd", A Fucilla Production
                     Company, and co-producer of the film “Fields of Gold” currently in pre production stage.
                     <br/>
@@ -756,11 +767,13 @@
                     <h6 class="sportsmen_subheader"><span class="fontbold">Mel Clarke</span>
                         <br>Double Para-Olympian medallist</h6>
                 </div>
-                <div class="sportsmens_modal-biography">She has also won Gold and Silver medals at the World Championships.
+                <div class="sportsmens_modal-biography">She has also won Gold and Silver medals at the World
+                    Championships.
                     Due to an arthritic condition Mel has had to use a wheelchair since the age of 11 and lost sight in
                     her aiming eye and had to remodel her approach physically and mentally.
                     <br/>
-                    <br>Mel has an amazing story that pupils can relate to due to the age she was whilst adapting to school,
+                    <br>Mel has an amazing story that pupils can relate to due to the age she was whilst adapting to
+                    school,
                     society and sport. A true hero of resilience and of British Sport.
                 </div>
 
@@ -786,7 +799,8 @@
             <!-- Основное содержимое модального окна -->
             <div class="testimonials-title sportsmens_title">
                 <h4>Alton Placholder School</h4></div>
-            <div class="sportsmens_modal-biography">"Brendan spoke with enthusiasm and conviction about his own personal journey to
+            <div class="sportsmens_modal-biography">"Brendan spoke with enthusiasm and conviction about his own personal
+                journey to
                 being
                 the best he
                 could be, and both the children and staff were captivated. He kept everyone engaged
