--- a/index.html
+++ b/index.html
@@ -11,24 +11,30 @@
 
 <header class="class-header">
 
+    <!--NAVIGATION-->
     <div class="header-nav-fixed">
+
         <div class="container">
             <div class="row">
 
-                <div class="col-md-4">
-                    <div class="margin-head">
-                        <img class="logo cus-line" src="src/image/logo.svg">
-                        <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
-                                class="caret custom-b"></b>Sports Stars Inspiration Day</a>
-                        <ul class="dropdown-menu dropmenu-custom">
-                            <li><a href="#">Sports Stars Inspiration Day</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Software page</a></li>
-                        </ul>
+                <!--LEFT MENU-->
+                <div class="col-md-5">
+                    <div class="menu_left">
+                        <img class="logo" src="src/image/logo.svg">
+                        <div class="menu_dropdown">
+                            <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
+                                    class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
+                            <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
+                                <li><a class="active" href="#">Sports Stars Inspiration Day</a></li>
+                                <li><a href="#">Software page</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-7 col-md-offset-1">
+                <!--./LEFT MENU-->
 
+                <!--RIGHT MENU-->
+                <div class="col-md-7 menu_right">
                     <nav class="navbar navbar-default navbar-custom">
                         <div class="container">
                             <div class="navbar-header">
@@ -46,20 +52,22 @@
                                     <li><a href="#testimonials">Testimonials</a></li>
                                     <li><a href="#software">Software</a></li>
                                     <li><a href="#contact">Contact</a></li>
-                                    <li><a href="#myModal"
-                                           class="btn btn-primary navbar-custom host-event-color collapse"
+                                    <li><a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
                                            data-toggle="modal">Host event</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </nav>
-
-
                 </div>
+                <!--RIGHT MENU-->
+
             </div>
         </div>
+
     </div>
+    <!--./NAVIGATION-->
+
 
     <div class="mar-slide">
         <!--<div class="row">-->
