--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="col-md-12 subscribe-text">
                 <h1 class="subscribe-text2">Subscribe now to get 30% discount</h1>
             </div>
-            <div class="col-md-12 subscribe-button_pad">
+            <div class="col-md-12">
                 <button class="button--default subscribe-button" href="#myModal" data-toggle="modal">Host event</button>
             </div>
         </div>
@@ -697,7 +697,7 @@
                                     </div>
                                     <div class="form-group modal-hod">
                                         <button type="submit" id="form-submit"
-                                                class="btn btn-success btn-lg pull-right send-button">
+                                                class="button--primary send-button">
                                             Submit
                                         </button>
                                         <div id="msgSubmit" class="h3 text-center hidden">
@@ -706,12 +706,7 @@
                                         .
                                     </div>
                                 </div>
-                                <!--<div class="form-group">-->
-                                <!--<label for="message" class="h4 ">Additional notes (optional)</label>-->
-                                <!--<textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>-->
-                                <!--</div>-->
-                                <!--<button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>-->
-                                <!--<div id="msgSubmit" class="h3 text-center hidden">Message Submitted!</div>.-->
+
                             </div>
                         </form>
                         <!-- Футер модального окна -->
