--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                         <!-- Заголовок модального окна -->
                         <div class="modal-header sportsmen_modal-header">
                             <button type="button" class="close" data-dismiss="modal"
-                                    aria-hidden="true">×
+                                    aria-hidden="true"><img src="src/icon/x.svg" alt="reily"/>
                             </button>
                             <h4 class="modal-title">Host Olympian Day</h4>
                         </div>
