Add smooth scroll to menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/style.css" type="text/css"/>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar-main" data-offset="72">
 
 <header class="class-header">
 
@@ -47,11 +47,11 @@
                             </div>
                             <div class="collapse navbar-collapse" id="navbar-main">
                                 <ul class="nav navbar-nav">
-                                    <li><a href="#howitworks">How it works</a></li>
-                                    <li><a href="#speakers">Speakers</a></li>
-                                    <li><a href="#testimonials">Testimonials</a></li>
-                                    <li><a href="#software">Software</a></li>
-                                    <li><a href="#contact">Contact</a></li>
+                                    <li><a class="smooth_scroll" href="#howitworks">How it works</a></li>
+                                    <li><a class="smooth_scroll" href="#speakers">Speakers</a></li>
+                                    <li><a class="smooth_scroll" href="#testimonials">Testimonials</a></li>
+                                    <li><a class="smooth_scroll" href="#software">Software</a></li>
+                                    <li><a class="smooth_scroll" href="#contact">Contact</a></li>
                                     <li><a href="#myModal" class="btn btn-primary navbar-custom host-event-color collapse"
                                            data-toggle="modal">Host event</a>
                                     </li>
